# sigstack

./: .gitignore  Cargo.toml  README.md
crates/conversation-store/src/: store.rs
crates/signal-bot/: Cargo.toml
crates/signal-bot/src/: config.rs  lib.rs  main.rs  translation_interceptor.rs
crates/signal-bot/src/commands/: conditional_recall.rs  help.rs  kanban.rs  mod.rs  summary.rs
crates/signal-client/: Cargo.toml
crates/signal-client/src/: client.rs  receiver.rs  types.rs
crates/signal-registration-proxy/src/api/: handlers.rs
crates/signal-registration-proxy/src/signal/: client.rs
crates/translation/: Cargo.toml
crates/translation/src/: detect.rs  error.rs  lib.rs  translator.rs
crates/translation/src/provider/: libretranslate.rs  mod.rs
docker/: Dockerfile.messaging-daemon  docker-compose.yaml  phala-compose-register.yaml  phala-compose.yaml
docs/: deploy-guide.html  signal-cli-lock-contention-diagnostic.md
messaging-daemon/messaging_daemon/: confirm.py  db.py  http_api.py
messaging-daemon/messaging_daemon/backends/: base.py
slides/: index.html
