[package]
name = "signal-client"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
tokio-stream.workspace = true
async-stream.workspace = true
urlencoding = "2"
base64 = "0.22"
tokio-tungstenite.workspace = true
futures-util.workspace = true

[dev-dependencies]
tokio-test.workspace = true
wiremock.workspace = true
